Fix overflow

--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   color: black;
+  overflow: hidden;
 }
 
 *, *:before, *:after {
